src/containers/Articles/styles.scss
/*
    ------------------------
    ------ Articles --------
    ------------------------
*/

@import '../../styles/app.scss';

.articles{
    background-color: var(--color-bg-section-article);
    padding: var(--space-5xl) 0;

    &__header{
        text-align: center;
        margin-bottom: var(--space-lg);
    }

    &__list{
        & > *:not(:last-child){
            margin-bottom: var(--space-md);
        }
    }

    // Desktop
    @include breakpoint-up(large){
        &__list{
            @include flex(sb, c, row);

            & > *:not(:last-child){
                margin-bottom: initial;
            }
        }
    }
}

